--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -2,4 +2,6 @@
 layout: layouts/base.njk
 templateClass: tmpl-home
 ---
+
+<a href="https://integrately.com?ref=jut1sk&utm_campaign=Website Referral" target="_blank"><img src="https://integrately-images.s3-us-west-2.amazonaws.com/we-automate-with-integrately-light.svg" width="120" alt="Integrately - Integration platform" title="Click to learn more"/></a>
 {{ content | safe }}
